tests/success/typechecking/Prop.vix
map : forall (b : type). b -> int
map xs = map xs
